<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">About this App</string>
    <string name="about_close_button">Close</string>
    <string name="action_about">About this App</string>
    <string name="app_name">WindNow</string>
    <string name="dialog_uname">Name for new station</string>
    <string name="dialog_url">URL for new station</string>
    <string name="action_settings">Settings</string>
    <string name="action_userprefs">User Data</string>
    <string name="action_new_station">Create new station</string>
    <string name="action_refresh">Refresh all stations</string>
    <string name="title_activity_station_text">Station</string>
    <string name="title_activity_station_pic">Station</string>
    <string name="title_activity_settings">Settings</string>
    <string name="authors_note">        Contact: pulce@gmx.at \n
        Copyright 2015 - 2016 \n
        by Florian Hauser</string>
    <string name="legal_notice">    Dependencies:\n
    jsoup - http://jsoup.org/ \n
    \n
    License: \n  
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version. \n

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details. \n
    
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see http://www.gnu.org/licenses/.</string>
    <string name="help_string">WindNow\n\n
            This app manages wind (or weather) stations with a focus on low traffic consumtion.
            One station can only be\n
            &#8226; a single image with a static url.\n
            &#8226; a station provided by wetteronline.com as \"aktuelles Wetter\".\n
			&#8226; a station provided by wetterdienst.de as \"Aktuell\".\n
            &#8226; mountain / valley stations of http://www.provinz.bz.it/wetter/wetterstationen.asp.\n
            &#8226; forecast of http://www.flug-wetter.at/alptherm/vorhersage.html. This requires valid user data in the apps menu. \n\n
 
To load (or refresh) data for a station either refresh all stations from the settings menu, or long-click 
a station in the list for a selective refresh. Deleting and editing a station is possible by long-clicking.\n\n
            
There are three ways to create new stations:\n
1. Specifying url and name in the \"new station\" dialog in settings.\n
2. Sharing an image or a valid url in an android browser.\n
3. Modifying the (self-explanatory) \"stations\" file in the \"WindNow\" directory on your sd-card.\n\n</string>
    <string name="create_the_new_station">Create the new station:</string>
    <string name="really_delete">Really delete this station?</string>
    <string name="diag_refresh_station">Refresh Station</string>
    <string name="diag_delete_station">Delete Station</string>
    <string name="diag_station_full_screen">Open station full-screen</string>
    <string name="not_loaded">Not loaded</string>
    <string name="downloaded_at">"Downloaded: "</string>
    <string name="title_activity_help">Help</string>
    <string name="action_help">Help</string>
    <string name="downloading">Download started</string>
    <string name="download_error">Download error</string>
    <string name="could_not_parse">Could not parse. Wrong Url?</string>
    <string name="maximum_download_retries">Maximum download retries</string>
    <string name="maximum_number_summary">Currently set to:</string>
    <string name="edit_station">Edit station</string>
    <string name="edit_the_station">Edit station</string>
    <string name="position_in_list">Position in list:</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="check_for_updates_failed">Check for updates failed</string>
    <string name="already_latest_version">You are using the latest version</string>
    <string name="new_version_available">is available, you use</string>
    <string name="current_stations_file">Current file:</string>
    <string name="menu_save_as">Save copy as</string>

    <string name="title_file_preferece_activity">File Chooser</string>
    <string name="filechooser_folder">Folder</string>
    <string name="filechooser_parent_directory">Parent Directory</string>
    <string name="filechooser_load_failed">Could not load Stations File</string>
    <string name="filechooser_file_size">"File Size: "</string>
    <string name="filechooser_save_hint">This will save a copy of your stations file in the current folder.</string>
    <string name="menu_sel_stationsfile">Select stations file</string>
    <string name="error_loading_stations_file">Error loading stations file</string>
    <string name="userprefs_username">User Name</string>
    <string name="userprefs_password">Password</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="successfully_saved">"Successfully saved "</string>
    <string name="permission_info">No permission for access to external storage - this permission is needed for the app to access stations.txt</string>
</resources>