<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_station"
        android:orderInCategory="100"
        android:title="@string/action_new_station"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_file"
        android:orderInCategory="100"
        android:title="@string/menu_sel_stationsfile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_userdata"
        android:orderInCategory="100"
        android:title="@string/action_userprefs"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/check_for_updates"/>
 </menu>