<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow>

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/textcp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/authors_note" />
            </LinearLayout>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/legal_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dip"
                android:layout_span="2"
                android:text="@string/legal_notice"
                android:textSize="10sp"
                android:textStyle="italic" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/confButton"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_transparent_button"
                android:layout_gravity="right"
                android:paddingRight="16dp"
                android:textColor="@color/accent"
                android:text="@string/about_close_button"
                android:layout_span="2" />
        </TableRow>
    </TableLayout>

</ScrollView>