<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/newStationName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="15dip"
        android:hint="@string/dialog_uname"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newStationUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:hint="@string/dialog_url"
        android:singleLine="true" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_marginLeft="13dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position_in_list"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dip"
        android:layout_marginRight="0dip" >

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/selector_transparent_button"
            android:textColor="@color/accent"
            android:text="@android:string/ok"
            android:paddingRight="16dp"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_transparent_button"
            android:text="@android:string/cancel"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btn_confirm"
            android:layout_toStartOf="@+id/btn_confirm"
            android:textColor="@color/accent"
            android:paddingRight="8dp"
            />

   </RelativeLayout>

</LinearLayout>